--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,18 @@
+affine==2.4.0
+attrs==25.4.0
 cachetools==6.2.1
 certifi==2025.10.5
 charset-normalizer==3.4.4
+click==8.3.1
+click-plugins==1.1.1.2
+cligj==0.7.2
+contextily==1.6.2
 contourpy==1.3.3
 cycler==0.12.1
 earthengine-api==1.6.14
 fonttools==4.60.1
+geographiclib==2.1
+geopy==2.4.1
 google-api-core==2.28.1
 google-api-python-client==2.186.0
 google-auth==2.42.1
@@ -19,6 +27,7 @@ idna==3.11
 joblib==1.5.2
 kiwisolver==1.4.9
 matplotlib==3.10.7
+mercantile==1.2.1
 numpy==2.3.4
 packaging==25.0
 pandas==2.3.3
@@ -29,9 +38,11 @@ protobuf==6.33.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pyparsing==3.2.5
+pyproj==3.7.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 pytz==2025.2
+rasterio==1.4.3
 requests==2.32.5
 rsa==4.9.1
 scikit-learn==1.7.2
@@ -43,3 +54,4 @@ threadpoolctl==3.6.0
 tzdata==2025.2
 uritemplate==4.2.0
 urllib3==2.5.0
+xyzservices==2025.10.0
