--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 affine==2.4.0
+anyio==4.11.0
 attrs==25.4.0
 cachetools==6.2.1
 certifi==2025.10.5
@@ -22,7 +23,10 @@ google-cloud-storage==3.4.1
 google-crc32c==1.7.1
 google-resumable-media==2.7.2
 googleapis-common-protos==1.71.0
+h11==0.16.0
+httpcore==1.0.9
 httplib2==0.31.0
+httpx==0.28.1
 idna==3.11
 joblib==1.5.2
 kiwisolver==1.4.9
@@ -41,6 +45,7 @@ pyparsing==3.2.5
 pyproj==3.7.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
+python-telegram-bot==22.5
 pytz==2025.2
 rasterio==1.4.3
 requests==2.32.5
@@ -49,8 +54,10 @@ scikit-learn==1.7.2
 scipy==1.16.3
 seaborn==0.13.2
 six==1.17.0
+sniffio==1.3.1
 statsmodels==0.14.5
 threadpoolctl==3.6.0
+typing_extensions==4.15.0
 tzdata==2025.2
 uritemplate==4.2.0
 urllib3==2.5.0
