--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 affine==2.4.0
 anyio==4.11.0
+APScheduler==3.11.1
 attrs==25.4.0
 cachetools==6.2.1
 certifi==2025.10.5
@@ -59,6 +60,7 @@ statsmodels==0.14.5
 threadpoolctl==3.6.0
 typing_extensions==4.15.0
 tzdata==2025.2
+tzlocal==5.3.1
 uritemplate==4.2.0
 urllib3==2.5.0
 xyzservices==2025.10.0
